# ProxG2O

./: CMakeLists.txt
doc/: 近接点用g2o形式.tex
g2o/: CMakeLists.txt
g2o/apps/: CMakeLists.txt
g2o/apps/g2o_viewer/: g2o_viewer.cpp
g2o/core/: CMakeLists.txt  base_fixed_sized_edge.hpp  factory.cpp  factory.h  optimizable_graph.cpp  optimization_algorithm_gauss_newton.cpp  sparse_optimizer.cpp  sparse_optimizer.h
g2o/solvers/: CMakeLists.txt
g2o/stuff/: opengl_primitives.cpp  opengl_primitives.h
g2o/types/: CMakeLists.txt
g2o/types/slam2d/: CMakeLists.txt  edge_prox.cpp  edge_prox.h  edge_se2.cpp  edge_se2.h  edge_switch_prox.cpp  edge_switch_prox.h  parameter_spp_weight.cpp  parameter_spp_weight.h  types_slam2d.cpp  types_slam2d.h  vertex_prox.cpp  vertex_prox.h  vertex_se2.h  vertex_switch_pp.cpp  vertex_switch_pp.h
