# Pre-canned types
#add_subdirectory(data)		#deleted by wada
add_subdirectory(slam2d)
#add_subdirectory(slam3d)	#deleted by wada
#add_subdirectory(sba)		#deleted by wada
#add_subdirectory(sim3)		#deleted by wada
#add_subdirectory(icp)		#deleted by wada
#add_subdirectory(sclam2d)	#deleted by wada

#add_subdirectory(slam2d_addons)	#deleted by wada
#add_subdirectory(slam3d_addons)	#deleted by wada
